--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Edmond Tong
                 </p>
-                <p> I recently graduated from the University of Michigan with a MS in Robotics (2024). I reviced a BS in Mechanical Engineer from Brigham Young Universtiy in 2018. I am currently looking for reseach and PhD positions.
+                <p>  I recently graduated from the University of Michigan with an MS in Robotics (2024). I received a BS in Mechanical Engineering from Brigham Young University in 2018. I am currently looking for research and PhD positions.
                 </p>
                 <p>
                 </p>
