--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ekjt@umich.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="data/Edmond-CV.pdf">CV</a> 
+                  <a href="data/EdmondCV.pdf">CV</a> 
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -41,7 +41,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in utilizing LLM and VLM to enbale robots to understand the open world.</span>.
+                  I'm interested in utilizing LLM and VLM to enbale robots to understand the open world.</span>
                 </p>
               </td>
             </tr>
