--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
         <table style="width:100%; margin:auto; border:0; border-spacing:0;">
           <tr>
             <td style="padding:20px; width:25%; vertical-align:middle;">
+              <img src="images/grasp.png" alt="OVAL-Grasp" width="160" height="160">
+            </td>
+            <td style="padding:20px; width:75%; vertical-align:middle;">
+              <a href="https://ekjt.github.io/OVAL-Grasp/">
+                <span class="papertitle"> OVAL‑Grasp: Open‑Vocabulary Affordance Localization for Task Oriented Grasping </span>
+              </a>
+              <br>
+              <strong>Edmond Tong</strong>, Advaith Balaji, Anthony Opipari, Stanley Lewis, Zhen Zeng, Odest Chadwicke Jenkins
+              <br>
+              <em> ISER </em> 2025
+              <br>
+              <a href="https://ekjt.github.io/OVAL-Grasp/">project page</a> /
+              <a href="https://youtu.be/M2PrpD1ZlSI">video</a> /
+              <a href="https://arxiv.org/abs/2404.11000">arXiv</a>
+              <p>Utilizing large language models to associate affordances with specific parts of objects, and ground them using a VLM to generate task oriented grasp.</p>
+            </td>
+          </tr>          
+          <tr>
+            <td style="padding:20px; width:25%; vertical-align:middle;">
               <img src="images/oval.png" alt="OVAL-Prompt" width="160" height="160">
             </td>
             <td style="padding:20px; width:75%; vertical-align:middle;">
@@ -64,6 +83,7 @@
               <p>Utilizing large language models to associate affordances with specific parts of objects, thereby localizing them to facilitate manipulation.</p>
             </td>
           </tr>
+
         </table>
 
         <!-- Footer -->
