updated bio and links

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
           <tr>
             <td style="padding:2.5%; width:63%; vertical-align:middle;">
               <p class="name" style="text-align:center;">Edmond Tong</p>
-              <p>I am currently pursuing a PhD at Queensland University of Technology (QUT) in the Visual Learning and Understanding Group. I completed an MS in Robotics from the University of Michigan (2024), and I hold a BS in Mechanical Engineering from Brigham Young University (2018). My research interests lie at the intersection of computer vision, robotics, and machine learning.</p>
-              <p>I'm interested in enabling robots to understand and act in open-world environments. Specifically, I aim to generalize robotic manipulation policies beyond object class and spatial differences, tackling challenges such as diverse task semantics, environmental variability, and contextual reasoning in unstructured real-world settings.</p>
-              <p style="text-align:center;">
-                <a href="mailto:ekjt@umich.edu">Email</a> 
+              <p>I am currently pursuing a PhD in Robotics at Queensland University of Technology (QUT) under the supervision of Prof. Niko Sünderhauf and Prof. Jonathan Roberts. I completed an MS in Robotics from the University of Michigan (2024), and I hold a BS in Mechanical Engineering from Brigham Young University (2018). My research interests lie at the intersection of computer vision, robotics, and machine learning.</p>
+              <p>I am interested in advancing robotic capabilities by exploring visual and semantic representations derived from human video demonstrations. Specifically, my goal is to enable robots to learn complex, manipulation policies by efficiently extracting skills, affordances, logic from unstructured human-centric data, thereby allowing for robust policy generalization across diverse, real-world environments.</p>              <p style="text-align:center;">
+                <a href="mailto:ekjtong@gmail.com">Email</a> 
                 <!-- &nbsp;/&nbsp;
                 <a href="data/EdmondCV.pdf">CV</a> -->
               </p>
@@ -60,7 +59,7 @@
               <br>
               <a href="https://ekjt.github.io/OVAL-Grasp/">project page</a> /
               <a href="https://youtu.be/M2PrpD1ZlSI">video</a> /
-              <a href="https://arxiv.org/abs/2404.11000">arXiv</a>
+              <a href="https://arxiv.org/abs/2511.20841">arXiv</a>
               <p>Utilizing large language models to associate affordances with specific parts of objects, and ground them using a VLM to generate task oriented grasp.</p>
             </td>
           </tr>          
