--- a/index.html
+++ b/index.html
@@ -84,7 +84,26 @@
           </tr>
 
         </table>
-
+        <table style="width:100%; margin:auto; border:0; border-spacing:0;">
+          <tr>
+            <td style="padding:20px;">
+              <h2>Teaching</h2>
+            </td>
+          </tr>
+        </table>
+        <table style="width:100%; margin:auto; border:0; border-spacing:0;">
+            <tr>
+                <td style="padding:20px; vertical-align:top;">
+                    <span style="font-weight:bold;">Graduate Student Instructor</span> | University of Michigan, Ann Arbor, MI
+                    <br>
+                    <span style="display:block; margin-top:5px;">
+                        <em style="font-weight:bold;">ROB 502: Programming for Robotics</em> (Fall 2023)
+                        <span style="margin:0 10px;">|</span>
+                        <em style="font-weight:bold;">ROB 599: Deep Learning for Robotic Perception</em> (Winter 2024)
+                    </span>
+                </td>
+            </tr>
+        </table>
         <!-- Footer -->
         <table style="width:100%; margin:auto; border:0; border-spacing:0;">
           <tr>
